src/test/ui/issues/issue-48838.stderr
error[E0308]: mismatched types
  --> $DIR/issue-48838.rs:2:14
   |
LL |     Square = |x| x,
   |              ^^^^^ expected `isize`, found closure
   |
   = note: expected type `isize`
           found closure `[closure@$DIR/issue-48838.rs:2:14: 2:19]`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0308`.
